<resources>
    <string name="app_name">Mastermind-Android Society</string>
    <string name="what_is_mastermind">What is Mastermind?</string>
    <string name="a_de_coding_board_a_matrix_10x4_or_10x5_depending_on_the_selected_difficulty_where_the_codebreaker_tries_to_guess_the_pattern_in_both_order_and_color_within_ten_turns_each_guess_is_made_by_placing_a_row_of_code_pegs_on_the_decoding_board">- A de-coding board, a matrix 10X4 (or 10X5, depending on the selected difficulty), where the codebreaker tries to guess the pattern, in both order and color, within ten turns. Each guess is made by placing a row of code pegs on the decoding board.</string>
    <string name="eight_or_ten_pegs_with_different_color_once_placed_the_codemaker_the_cpu_provides_feedback_by_placing_from_zero_to_four_key_pegs_in_the_small_holes_of_the_row_with_the_guess_a_black_key_peg_is_placed_for_each_code_peg_from_the_guess_which_is_correct_in_both_color_and_position_a_white_key_peg_indicates_the_existence_of_a_correct_color_code_peg_placed_in_the_wrong_position">- Eight (or ten) pegs with different color. Once placed, the codemaker (the CPU) provides feedback by placing from zero to four key pegs in the small holes of the row with the guess. A black key peg is placed for each code peg from the guess which is correct in both color and position. A white key peg indicates the existence of a correct color code peg placed in the wrong position!</string>
    <string name="end_of_the_game">End of the game</string>
    <string name="good_luck">GOOD LUCK!</string>
    <string name="gameplay_and_rules">Gameplay and rules</string>
    <string name="if_you_figure_out_the_hidden_code_before_the_tenth_attempt_you_win">Click the green arrow to verify your guess. If you figure out the hidden code before the last attempt/row, you win!</string>
    <string name="mastermind_is_a_code_breaking_game_where_you_can_squeeze_your_brains_against_the_computer">Mastermind is a code-breaking game, where you can squeeze your brains against the computer.</string>
    <string name="the_game_is_played_using">The game is played using:</string>
    <string name="high_scores">High scores</string>
    <string name="instruction">Instruction</string>
    <string name="new_game">New game</string>
    <string name="hard">Hard</string>
    <string name="challenge_your_limits_10_colors_5_holes">Challenge your limits: 10 colors, 5 holes</string>
    <string name="easy">Easy</string>
    <string name="for_beginners_8_colors_4_holes">For beginners: 8 colors, 4 holes</string>
    <string name="for_expert_users_10_colors_4_holes">For expert users: 10 colors, 4 holes</string>
    <string name="medium">Medium</string>
    <string name="data">Date</string>
    <string name="attempts">Attempts</string>
    <string name="difficulty">Difficulty</string>
    <string name="name">Name</string>
    <string name="result">Result</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="ok">Save and go back</string>
    <string name="you_win">YOU WIN!</string>
    <string name="back">Back</string>
    <string name="try_again">Try again</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="select_the_level_of_difficulty">Select the level of difficulty:</string>
    <string name="The_correct_sequence_is">The correct sequence is:</string>
    <string name="col">Choose the color</string>
    <string name="toast">Warning! Must insert a name!</string>
    <string name="txtLevelHard">Level Hard</string>
    <string name="txtLevelEasy">Level Easy</string>
    <string name="txtLevelNormal">Level Normal</string>
</resources>
