<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background">


    <pl.droidsonroids.gif.GifTextView
        android:layout_height="170dp"
        android:background="@drawable/cryingmeme"


        android:layout_width="150dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:id="@+id/btnTry"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:background="@drawable/custom_buttons"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle"
            android:onClick="onClick (Testing)" />

        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:id="@+id/btnBack"
            android:layout_weight="1"
            android:background="@drawable/custom_buttons"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:text="@string/you_lose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:id="@+id/Lrisult">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/mastermindlauncher"
            android:id="@+id/imageView"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/mastermindlauncher"
            android:id="@+id/imageView2"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/mastermindlauncher"
            android:id="@+id/imageView3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@mipmap/mastermindlauncher"
            android:id="@+id/imageView4"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/mastermindlauncher"
            android:id="@+id/imageView5"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="5dp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:text="@string/The_correct_sequence_is"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Lrisult"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/enter_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
            android:textColor="@android:color/white"
            android:textStyle="normal|italic" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_weight="1"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</RelativeLayout>
