<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trophy"
        android:id="@+id/imageView4"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/you_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/button"
        android:background="@drawable/custom_buttons"
        android:textColor="@android:color/black"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />


    <pl.droidsonroids.gif.GifTextView
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:background="@drawable/firework1"
        android:layout_alignParentTop="true"
         />
    <pl.droidsonroids.gif.GifTextView
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:background="@drawable/firework2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/enter_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/white"
            android:layout_weight="149.39"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="0.15"
            tools:ignore="LabelFor"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</RelativeLayout>
